--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_svg: ^1.1.6
+  firebase_core: ^2.4.1
+  firebase_messaging: ^14.2.1
+  background_fetch: ^1.1.2
+  dio: ^4.0.6
+  assets_audio_player: ^3.0.6
+  auto_start_flutter: ^0.1.1
+  flutter_local_notifications: ^13.0.0
+  timezone: ^0.9.1
+  just_audio_background: ^0.0.1-beta.9
+  just_audio: ^0.9.31
+  volume_controller: ^2.0.6
 
 dev_dependencies:
   flutter_test:
