--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   equatable: ^2.0.5
   dartz: ^0.10.1
   get_it: ^7.2.0
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
