--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   dartz: ^0.10.1
   get_it: ^7.2.0
   shared_preferences: ^2.0.15
+  jwt_decoder: ^2.0.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
